--- a/Cricketbuzz.html
+++ b/Cricketbuzz.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Cricbuzz</title>
+    <link rel="icon" href="cric1.jpg" type="cric.jpg" sizes="16x16">
 
     <style>
             table, th, td {
